some cleanup and initial setup for gui controlls

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   </head>
 
   <body>
+    <div id="gui-container"></div>
     <div id="container"></div>
   </body>
 
   <script src="js/lib/jquery-1.9.1.js"></script>
   <script src="js/lib/three.js"></script>
   <script src="js/lib/trackball.js"></script>
-  <script src="js/lib/controls/FlyControls.js"></script>
-  <script src="js/lib/orbit.js"></script>
   <script src="js/lib/dat.gui.js"></script>
   <script src="js/lasstream.js"></script>
   <script src="js/util.js"></script>
