refactoring:   * classes for point streaming, point cloud visualiation   * pubsub for decoupling app components

--- a/plasio/app/index.html
+++ b/plasio/app/index.html
@@ -3,7 +3,7 @@
     <head>
       <title>webals</title>
       <link rel="stylesheet" type="text/css" href="css/screen.css">
-        <script data-main="js/main" src="js/require-jquery.js"></script>
+        <script data-main="js/main" src="js/lib/require-jquery.js"></script>
     </head>
     <body>
       <div id="container"></div>
